--- a/index.html
+++ b/index.html
@@ -14,8 +14,47 @@ The Departmental Research Seminar is designed to provide academic staff and PhD 
 <br />
 Presentations are not expected. Discussions will take the form of an informal Q&A session. Papers are distributed at least one week prior to each session. Participants are expected to read the manuscript ahead of time and to come prepared with comments or questions. Please email alexandra.hartman@ucl.ac.uk to be added to the mailing list, through which the papers are distributed.
 
-### What's on
-Space reserved for upcoming talks in DRS
+<html>
+<head>
+<style>
+* {
+    box-sizing: border-box;
+}
 
-### Around UCL
-Space reserved for talks, event and workshops at other UCL departments
+body {
+    margin: 0;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+</style>
+</head>
+<body>
+  
+<h2>Let's try this stuff</h2>
+
+<div class="row">
+  <div class="column" style="background-color:#aaa;">
+    <h2>Column 1</h2>
+    <p>Some text..</p>
+  </div>
+  <div class="column" style="background-color:#bbb;">
+    <h2>Column 2</h2>
+    <p>Some text..</p>
+  </div>
+</div>
+
+</body>
+</html>
