--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@ body {
 <h2>Let's try this stuff</h2>
 
 <div class="row">
-  <div class="column" style="background-color:#aaa;">
-    <h2>Column 1</h2>
-    <p>Some text..</p>
+  <div class="column">
+    <h2>What's on?</h2>
+    <p>This space is reserved for upcoming talks in the Departmental Research Seminar.</p>
   </div>
-  <div class="column" style="background-color:#bbb;">
-    <h2>Column 2</h2>
-    <p>Some text..</p>
+  <div class="column">
+    <h2>Around UCL</h2>
+    <p>This space is reserved for upcoming events, talks and workshops around UCL and other London universities.</p>
   </div>
 </div>
 
