--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: "Departmental Research Seminar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-The Departmental Research Seminar is designed to provide academic staff and PhD students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to all who are interested. The sessions are not limited to specific subfields and participation by all staff and PhD students is welcome. The idea is to create a forum that brings together individuals with diverse interests. 
+The Departmental Research Seminar at UCL's Department of Political Science is designed to provide academic staff and PhD students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to all who are interested. The sessions are not limited to specific subfields and participation by all staff and PhD students is welcome. The idea is to create a forum that brings together individuals with diverse interests. 
 <br />
 
 <html>
