--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ body {
 <div class="row">
   <div class="column">
     <h2>What's on?</h2>
-    <p>This space is reserved for upcoming talks in the Departmental Research Seminar.</p>
+    <p>1 November 2017: Manuel Vogt (University College London)</p>
+    <p>From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</p>
   </div>
   <div class="column">
     <h2>Around UCL</h2>
