--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ body {
 <div class="row">
   <div class="column">
     <h2>What's on?</h2>
-    <p>1 November 2017: Manuel Vogt (University College London)</p>
+    <h3>1 November 2017: Manuel Vogt (University College London)</h3>
     <p><a href = "https://moodle.ucl.ac.uk/pluginfile.php/4369151/mod_resource/content/1/Manuel%20Vogt%20%28UCL%29.pdf">From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></p>
   </div>
   <div class="column">
