--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ body {
 <div class="row">
   <div class="column">
     <h2>What's on?</h2>
-    <h3>1 November 2017: Manuel Vogt (University College London)</h3>
-    <p><a href = "https://moodle.ucl.ac.uk/pluginfile.php/4369151/mod_resource/content/1/Manuel%20Vogt%20%28UCL%29.pdf">From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></p>
+    <p>1 November 2017: Manuel Vogt (University College London)</p>
+    <a href = "https://moodle.ucl.ac.uk/pluginfile.php/4369151/mod_resource/content/1/Manuel%20Vogt%20%28UCL%29.pdf" target="_blank" >From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
   </div>
   <div class="column">
     <h2>Around UCL</h2>
