--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
   <div class="column">
     <h2>What's on?</h2>
     <p>1 November 2017: Manuel Vogt (University College London)</p>
-    <a href = "https://moodle.ucl.ac.uk/pluginfile.php/4369151/mod_resource/content/1/Manuel%20Vogt%20%28UCL%29.pdf" target="_blank" >Paper title: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
+    <a href = "" target="_blank" >Paper title: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
   </div>
   <div class="column">
     <h2>Around UCL</h2>
