--- a/calendar/index.html
+++ b/calendar/index.html
@@ -11,14 +11,30 @@ title: "Seminar Calendar"
 
 Test text.
 
-<div class="one-third column alpha">
-  Column 1
+<div style="float: left; width: 33%;">
+<ul>
+<li>Left Item 1</li>
+<li>Left Item 2</li>
+<li>Left Item 3</li>
+<li>Left Item 4</li>
+<li>Left Item 5</li>
+</ul>
 </div>
-
-<div class="one-third column">
-  Column 2
+<div style="float: left; width: 33%;">
+<ul>
+<li>Middle Item 1</li>
+<li>Middle Item 2</li>
+<li>Middle Item 3</li>
+<li>Middle Item 4</li>
+<li>Middle Item 5</li>
+</ul>
 </div>
-
-<div class="one-third column omega">
-  Column 3
+<div style="float: right; width: 33%;">
+<ul>
+<li>Right Item 1</li>
+<li>Right Item 2</li>
+<li>Right Item 3</li>
+<li>Right Item 4</li>
+<li>Right Item 5</li>
+</ul>
 </div>
