--- a/calendar/index.html
+++ b/calendar/index.html
@@ -9,7 +9,7 @@ title: "Seminar Calendar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-Test text.
+Test text again.
 
 <div style="float: left; width: 33%;">
 <ul>
