--- a/calendar/index.html
+++ b/calendar/index.html
@@ -9,15 +9,12 @@ title: "Seminar Calendar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-Test text again.
+<h2> November 2017 </h2>
 
 <div style="float: left; width: 33%;">
 <ul>
 <li>Left Item 1</li>
 <li>Left Item 2</li>
-<li>Left Item 3</li>
-<li>Left Item 4</li>
-<li>Left Item 5</li>
 </ul>
 </div>
 <div style="float: left; width: 33%;">
