--- a/calendar/index.html
+++ b/calendar/index.html
@@ -9,11 +9,11 @@ title: "Seminar Calendar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-<h2> November 2017 </h2>
+<p><b> November 2017 </b></p>
 
 <div style="float: left; width: 33%;">
 <ul>
-<li>Left Item 1</li>
+<p>1 November: Manuel Vogt (University College London</p>
 <li>Left Item 2</li>
 </ul>
 </div>
@@ -21,9 +21,6 @@ title: "Seminar Calendar"
 <ul>
 <li>Middle Item 1</li>
 <li>Middle Item 2</li>
-<li>Middle Item 3</li>
-<li>Middle Item 4</li>
-<li>Middle Item 5</li>
 </ul>
 </div>
 <div style="float: right; width: 33%;">
