--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ title: "Departmental Research Seminar"
 The Departmental Research Seminar at UCL's Department of Political Science is designed to provide academic staff and PhD students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to all who are interested. The sessions are not limited to specific subfields and participation by all staff and PhD students is welcome. The idea is to create a forum that brings together individuals with diverse interests. 
 <br />
 
-<div style="float: left; width: 50%;">
+<div style="float: left; width: 45%;">
   <h2>What's on?</h2>
-  <p>1 November 2017: Manuel Vogt (University College London)</p>
+  <p>1 November 2017: Manuel Vogt (UCL)</p>
   <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
 </div>
-<div style="float: right; width: 50%;">
+<div style="float: right; width: 45%;">
   <h2>Around UCL</h2>
   <p>This space is reserved for upcoming events, talks and workshops around UCL and other London universities.</p>
 </div>
