--- a/calendar/index.html
+++ b/calendar/index.html
@@ -10,25 +10,15 @@ title: "Seminar Calendar"
 </div><!-- /.tiles -->
 
 <p><b> November 2017 </b></p>
-
 <div style="float: left; width: 33%;">
-<ul>
-<p>1 November: Manuel Vogt (University College London</p>
-<li>Left Item 2</li>
-</ul>
+  <p>22 November: Tom O'Grady (UCL)</p>
+  Paper: TBD
 </div>
 <div style="float: left; width: 33%;">
-<ul>
-<li>Middle Item 1</li>
-<li>Middle Item 2</li>
-</ul>
+  <p>15 November: Christine Cheng (King's College)
+  Paper: TBD
 </div>
 <div style="float: right; width: 33%;">
-<ul>
-<li>Right Item 1</li>
-<li>Right Item 2</li>
-<li>Right Item 3</li>
-<li>Right Item 4</li>
-<li>Right Item 5</li>
-</ul>
+  <p>1 November: Manuel Vogt (UCL)</p>
+  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
 </div>
