--- a/calendar/index.html
+++ b/calendar/index.html
@@ -3,19 +3,13 @@ layout: archive
 title: "Seminar Calendar"
 ---
 
-<div class="tiles">
-{% for post in site.posts %}
-	{% include post-grid.html %}
-{% endfor %}
-</div><!-- /.tiles -->
-
 <p><b> November 2017 </b></p>
 <div style="float: left; width: 33%;">
   <p>22 November: Tom O'Grady (UCL)</p>
   Paper: TBD
 </div>
 <div style="float: left; width: 33%;">
-  <p>15 November: Christine Cheng (King's College)
+  <p>15 November: Christine Cheng (King's College)</p>
   Paper: TBD
 </div>
 <div style="float: right; width: 33%;">
