--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,11 +5,11 @@ title: "Seminar Calendar"
 
 <p><b> November 2017 </b></p>
 <div style="float: left; width: 33%;">
-  <p>22 November: Tom O'Grady (UCL)</p>
+  22 November: Tom O'Grady (UCL)
   Paper: TBD
 </div>
 <div style="float: left; width: 33%;">
-  <p>15 November: Christine Cheng (King's College)</p>
+  <p>15 November: <a href = "https://www.kcl.ac.uk/sspp/departments/warstudies/people/lecturers/cheng.aspx" target="_blank" >Christine Cheng (King's College)</a></p>
   Paper: TBD
 </div>
 <div style="float: right; width: 33%;">
