--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@ title: "Departmental Research Seminar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-The Departmental Research Seminar at UCL's Department of Political Science is designed to provide academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.
+<p>The Departmental Research Seminar at UCL's Department of Political Science is designed to provide academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.</p>
 </br>
 
 <div style="float: left; width: 48%;">
   <h2>What's on?</h2>
   <p>1 November 2017: Manuel Vogt (UCL)</p>
-  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
+  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target = "_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
 </div>
 <div style="float: right; width: 48%;">
   <h2>Around UCL</h2>
-  <p>This space is reserved for upcoming events, talks and workshops around UCL and other London universities.</p>
+  <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a></p>
+  <p>7 November 2017: Molly Roberts (University of California, San Diego)</p>
 </div>
