--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,7 +5,7 @@ title: "Seminar Calendar"
 
 <p><b> November 2017 </b></p>
 <div style="float: left; width: 33%;">
-  22 November: Tom O'Grady (UCL)
+  <p>22 November: Tom O'Grady (UCL)</p>
   Paper: TBD
 </div>
 <div style="float: left; width: 33%;">
@@ -15,4 +15,18 @@ title: "Seminar Calendar"
 <div style="float: right; width: 33%;">
   <p>1 November: Manuel Vogt (UCL)</p>
   <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
+</div>
+
+<p><b> October 2017 </b></p>
+<div style="float: left; width: 33%;">
+  <p>18 October: Alexandra Hartmann (UCL)</p>
+  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3127507" target="_blank" >Paper: Legible Institutions and Land Demand</a>
+</div>
+<div style="float: left; width: 33%;">
+  <p>11 October: <a href = "http://www.polisci.northwestern.edu/people/core-faculty/daniel-krcmaric.html" target="_blank" >Daniel Krcmaric (Northwestern)</a></p>
+  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3112399" target="_blank" >Paper: Information, Secrecy, and Civilian Targeting</a>
+</div>
+<div style="float: right; width: 33%;">
+  <p>1 November: Jane Gingrich (Oxford)</p>
+  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3086175" target="_blank" >Paper: Schools and Economic Attitudes</a>
 </div>
