--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@ title: "Departmental Research Seminar"
 
 <div style="float: left; width: 48%;">
   <h2>What's on?</h2>
-  <p>1 November 2017: Manuel Vogt (UCL)</p>
-  <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target = "_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a>
-</div>
+  <p>1 November 2017, Manuel Vogt (UCL): <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target = "_blank">From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></p>
+  </div>
 <div style="float: right; width: 48%;">
   <h2>Around UCL</h2>
-  <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a></p>
-  <p>7 November 2017: Molly Roberts (University of California, San Diego)</p>
+  <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a> 7 November 2017, Molly Roberts (University of California, San Diego)</p>
 </div>
