--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@ title: "Departmental Research Seminar"
 <div style="float: left; width: 48%;">
   <h2>What's on?</h2>
   <p>1 November 2017, Manuel Vogt (UCL): <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target = "_blank">From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></p>
-  </div>
+  <p>15 November, Christine Cheng (King's College)</p>
+</div>
 <div style="float: right; width: 48%;">
   <h2>Around UCL</h2>
   <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a> 7 November 2017, Molly Roberts (University of California, San Diego)</p>
+  <p>Upcoming at <a href = "https://www.politics.ox.ac.uk/events.html" target = "_blank" >Oxford University's DPIR Events:</a> 7 November 2017, Dominik Handgartner (The Causal Effect of University Education on Political Attitudes and Behavior)</p>
 </div>
