--- a/calendar/index.html
+++ b/calendar/index.html
@@ -3,6 +3,23 @@ layout: archive
 title: "Seminar Calendar"
 ---
 
+<TABLE>
+   <TR>
+      <TD>22 November 2017</TD>
+      <TD>Tom O'Grady (UCL)</TD>
+      <TD>TBD</TD>
+   </TR>
+   <TR>
+      <TD>Data 3</TD>
+      <TD>Data 4</TD>
+   </TR>
+   <TR>
+      <TD>Data 5</TD>
+      <TD>Data 6</TD>
+   </TR>
+</TABLE>
+
+
 <p>22 November 2017: Tom O'Grady (UCL) - Paper TBD</p>
   
 <p>15 November 2017: <a href = "https://www.kcl.ac.uk/sspp/departments/warstudies/people/lecturers/cheng.aspx" target="_blank" >Christine Cheng (King's College)</a> - TBD</p>
