--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,29 +5,48 @@ title: "Seminar Calendar"
 
 <TABLE>
    <TR>
-      <TD>22 November 2017</TD>
-      <TD>Tom O'Grady (UCL)</TD>
-      <TD>TBD</TD>
+     <TD><b>Date</b></TD>
+     <TD><b>Speaker</b></TD>
+     <TD><b>Paper</b></TD>
    </TR>
    <TR>
-      <TD>Data 3</TD>
-      <TD>Data 4</TD>
+     <TD>4 October</TD>
+     <TD>Jane Gingrich (Oxford)</TD>
+     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3086175" target="_blank" >Schools and Economic Attitudes</a></TD>
    </TR>
    <TR>
-      <TD>Data 5</TD>
-      <TD>Data 6</TD>
+     <TD>11 October</TD>
+     <TD>Daniel Krcmaric (Northwestern)</TD>
+     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3112399" target="_blank" >Information, Secrecy, and Civilian Targeting</a></TD>
+   </TR>
+   <TR>
+     <TD>18 October</TD>
+     <TD>Alexandra Hartman (UCL)</TD>
+     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3127507" target="_blank" >Legible Institutions and Land Demand</a></TD>
+   </TR>
+   <TR>
+     <TD>1 November</TD>
+     <TD>Manuel Vogt (UCL)</TD>
+     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></TD>
+   </TR>
+   <TR>
+     <TD>15 November</TD>
+     <TD>Christine Cheng (King's College)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>22 November</TD>
+     <TD>Tom O'Grady (UCL)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>6 December</TD>
+     <TD>Andy Eggers (Oxford)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>13 December</TD>
+     <TD>Laura Jakli (Berkeley)</TD>
+     <TD>TBD</TD>
    </TR>
 </TABLE>
-
-
-<p>22 November 2017: Tom O'Grady (UCL) - Paper TBD</p>
-  
-<p>15 November 2017: <a href = "https://www.kcl.ac.uk/sspp/departments/warstudies/people/lecturers/cheng.aspx" target="_blank" >Christine Cheng (King's College)</a> - TBD</p>
-
-<p>1 November: Manuel Vogt (UCL) - <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >Paper: From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></p>
-
-<p>18 October: Alexandra Hartmann (UCL) - <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3127507" target="_blank" >Paper: Legible Institutions and Land Demand</a></p>
-
-<p>11 October: <a href = "http://www.polisci.northwestern.edu/people/core-faculty/daniel-krcmaric.html" target="_blank" >Daniel Krcmaric (Northwestern)</a> - <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3112399" target="_blank" >Paper: Information, Secrecy, and Civilian Targeting</a></p>
-
-<p>1 November: Jane Gingrich (Oxford) - <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3086175" target="_blank" >Paper: Schools and Economic Attitudes</a></p>
