--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@ title: "Departmental Research Seminar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-<p>The Departmental Research Seminar at UCL's Department of Political Science is designed to provide academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.</p>
+<p>The Research Seminar at UCL's Department of Political Science is designed to provide academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.</p>
+<p>Seminar Coordinator: Dr Alexandra Hartman</p>
+<p>Seminar Co-cordinator: Philipp Schroeder</p>
+<p>Location: Committee Room 2, Department of Political Science, The School of Public Policy, 31 Tavistock Square, London, WC1H 9QU</p>
 </br>
 
 <div style="float: left; width: 48%;">
   <h2>What's on?</h2>
-  <p>1 November 2017, Manuel Vogt (UCL): <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target = "_blank">From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></p>
-  <p>15 November, Christine Cheng (King's College)</p>
+  <p>15 November 2017, Christine Cheng (King's College)</p>
+  <p>22 November 2017, Tom O'Grady (UCL)</p>
+  <p>6 December 2017, Andy Eggers (Oxford)
 </div>
 <div style="float: right; width: 48%;">
   <h2>Around UCL</h2>
