--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ title: "Departmental Research Seminar"
 </div><!-- /.tiles -->
 
 <p>The Research Seminar at UCL's Department of Political Science is designed to provide academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.</p>
-<p>Seminar Coordinator: Dr Alexandra Hartman</p>
-<p>Seminar Co-cordinator: Philipp Schroeder</p>
+<p>Seminar Coordinators: <a href="mailto:"mailto:alexandra.hartman@ucl.ac.uk">Dr Alexandra Hartman</a> and <a href="mailto:"mailto:philipp.schroeder.13@ucl.ac.uk">Philipp Schroeder</a></p>
 <p>Location: Committee Room 2, Department of Political Science, The School of Public Policy, 31 Tavistock Square, London, WC1H 9QU</p>
+<p>Time: Wednesdays, 13.00-14.00
 </br>
 
 <div style="float: left; width: 48%;">
