--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,7 +2,8 @@
 layout: archive
 title: "Seminar Calendar"
 ---
-<b>2017/2018 - Term 1</b>
+<p><b>2017/2018 - Term 1</b></p>
+<p>For access to the presented papers, please email Dr Alexandra Hartman or Philipp Schroeder.
 
 <TABLE>
    <TR>
