--- a/other/index.html
+++ b/other/index.html
@@ -4,50 +4,17 @@ title: "Seminar Calendar"
 ---
 <b>2017/2018 - Term 1</b>
 
+<p>Find interesting talks and events around UCL or other London Universities.</p>
+
 <TABLE>
    <TR>
      <TD><b>Date</b></TD>
+     <TD><b>Seminar</b></TD>
      <TD><b>Speaker</b></TD>
-     <TD><b>Paper</b></TD>
    </TR>
    <TR>
-     <TD>4 October</TD>
-     <TD>Jane Gingrich (Oxford)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3086175" target="_blank" >Schools and Economic Attitudes</a></TD>
-   </TR>
-   <TR>
-     <TD>11 October</TD>
-     <TD>Daniel Krcmaric (Northwestern)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3112399" target="_blank" >Information, Secrecy, and Civilian Targeting</a></TD>
-   </TR>
-   <TR>
-     <TD>18 October</TD>
-     <TD>Alexandra Hartman (UCL)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3127507" target="_blank" >Legible Institutions and Land Demand</a></TD>
-   </TR>
-   <TR>
-     <TD>1 November</TD>
-     <TD>Manuel Vogt (UCL)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></TD>
-   </TR>
-   <TR>
-     <TD>15 November</TD>
-     <TD>Christine Cheng (King's College)</TD>
-     <TD>TBD</TD>
-   </TR>
-   <TR>
-     <TD>22 November</TD>
-     <TD>Tom O'Grady (UCL)</TD>
-     <TD>TBD</TD>
-   </TR>
-   <TR>
-     <TD>6 December</TD>
-     <TD>Andy Eggers (Oxford)</TD>
-     <TD>TBD</TD>
-   </TR>
-   <TR>
-     <TD>13 December</TD>
-     <TD>Laura Jakli (Berkeley)</TD>
-     <TD>TBD</TD>
+     <TD>7 November</TD>
+     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+     <TD>Molly Roberts (UCSD)</TD>
    </TR>
 </TABLE>
