--- a/other/index.html
+++ b/other/index.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Seminar Calendar"
+title: "Around UCL"
 ---
 <b>2017/2018 - Term 1</b>
 
@@ -9,12 +9,12 @@ title: "Seminar Calendar"
 <TABLE>
    <TR>
      <TD><b>Date</b></TD>
-     <TD><b>Seminar</b></TD>
      <TD><b>Speaker</b></TD>
+     <TD><b>Seminar</b></TD>
    </TR>
    <TR>
      <TD>7 November</TD>
-     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
      <TD>Molly Roberts (UCSD)</TD>
+     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
    </TR>
 </TABLE>
