--- a/other/index.html
+++ b/other/index.html
@@ -13,8 +13,18 @@ title: "Around UCL"
      <TD><b>Seminar</b></TD>
    </TR>
    <TR>
-     <TD>7 November</TD>
+     <TD>7 November 2017</TD>
      <TD>Molly Roberts (UCSD)</TD>
+     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+   </TR>
+   <TR>
+     <TD>14 November 2017</TD>
+     <TD>Stefan Krasa (UofI, Urbana-Champaign)</TD>
+     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+   </TR>
+   <TR>
+     <TD>21 November 2017</TD>
+     <TD>Milan Svolik (Yale)</TD>
      <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
    </TR>
 </TABLE>
