--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@ title: "Departmental Research Seminar"
 {% endfor %}
 </div><!-- /.tiles -->
 
-<p>The Research Seminar at UCL's Department of Political Science is designed to provide academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.</p>
+<p>The Research Seminar at UCL's Department of Political Science provides academic staff and research students with an opportunity to workshop current research with the rest of the department. Seminars will take place throughout the term and attendance is open to everyone who is interested. The sessions are not limited to specific subfields and participation by all staff and research students is welcome. The idea is to create a forum that brings together individuals with diverse interests.</p>
 <p>Seminar Coordinators: <a href="mailto:alexandra.hartman@ucl.ac.uk">Dr Alexandra Hartman</a> and <a href="mailto:philipp.schroeder.13@ucl.ac.uk">Philipp Schroeder</a></p>
 <p>Location: Committee Room 2, Department of Political Science, The School of Public Policy, 31 Tavistock Square, London, WC1H 9QU</p>
 <p>Time: Wednesdays, 13.00-14.00
 </br>
 
 <div style="float: left; width: 48%;">
-  <h2>What's on?</h2>
+  <h2><a href = "https://polscidrs.github.io/calendar/">What's on?</a></h2>
   <p>15 November 2017, Christine Cheng (King's College)</p>
   <p>22 November 2017, Tom O'Grady (UCL)</p>
   <p>6 December 2017, Andy Eggers (Oxford)
 </div>
 <div style="float: right; width: 48%;">
-  <h2>Around UCL</h2>
+  <h2><a href = "https://polscidrs.github.io/other/">Around UCL</a></h2>
   <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a> 7 November 2017, Molly Roberts (University of California, San Diego)</p>
   <p>Upcoming at <a href = "https://www.politics.ox.ac.uk/events.html" target = "_blank" >Oxford University's DPIR Events:</a> 7 November 2017, Dominik Handgartner (The Causal Effect of University Education on Political Attitudes and Behavior)</p>
 </div>
