--- a/other/index.html
+++ b/other/index.html
@@ -2,9 +2,7 @@
 layout: archive
 title: "Around UCL"
 ---
-<b>2017/2018 - Term 1</b>
-
-<p>Find interesting talks and events around UCL or other London Universities.</p>
+<p>Find interesting talks and events around UCL and other London Universities.</p>
 
 <TABLE>
    <TR>
