--- a/calendar/index.html
+++ b/calendar/index.html
@@ -3,7 +3,7 @@ layout: archive
 title: "Seminar Calendar"
 ---
 <p><b>2017/2018 - Term 1</b></p>
-<p>To access presented papers, please email <a href="mailto:alexandra.hartman@ucl.ac.uk">alexandra.hartman@ucl.ac.uk</a>. To be added to the Departmental Research Seminar's mailing list, please email <a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a></p>
+<p>For access to presented papers, please email <a href="mailto:alexandra.hartman@ucl.ac.uk">alexandra.hartman@ucl.ac.uk</a>. To be added to the Departmental Research Seminar's mailing list, please email <a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a></p>
 
 <TABLE>
    <TR>
