--- a/other/index.html
+++ b/other/index.html
@@ -2,7 +2,7 @@
 layout: archive
 title: "Around UCL"
 ---
-<p>Find interesting talks and events around UCL and other London Universities.</p>
+<p>Find interesting talks and events around UCL and other London Universities. If you would like to see your event featured here, please email <a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a>.</p>
 
 <TABLE>
    <TR>
@@ -13,16 +13,16 @@ title: "Around UCL"
    <TR>
      <TD>7 November 2017</TD>
      <TD>Molly Roberts (UCSD)</TD>
-     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+     <TD><a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
    </TR>
    <TR>
      <TD>14 November 2017</TD>
      <TD>Stefan Krasa (UofI, Urbana-Champaign)</TD>
-     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+     <TD><a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
    </TR>
    <TR>
      <TD>21 November 2017</TD>
      <TD>Milan Svolik (Yale)</TD>
-     <TD><a href = http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+     <TD><a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
    </TR>
 </TABLE>
