--- a/other/index.html
+++ b/other/index.html
@@ -4,7 +4,7 @@ title: "Around UCL"
 ---
 
 
-<p>Find interesting talks and events around UCL and other London Universities. If you would like to see your event featured here, please email <a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a>.</p>
+<p>Find interesting talks and events around UCL and other London Universities. If you would like to see your event featured here please email <a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a>.</p>
 
 <TABLE>
    <TR>
