--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@ title: "Departmental Research Seminar"
 
 <div style="float: left; width: 48%;">
   <h2><a href = "https://polscidrs.github.io/calendar/">What's on?</a></h2>
-  <p>15 November 2017, Christine Cheng (King's College)</p>
-  <p>22 November 2017, Tom O'Grady (UCL)</p>
-  <p>6 December 2017, Andy Eggers (Oxford)
+  <p>17 January 2018, Elizabeth Morrow (King's College)</p>
+  <p>24 January 2018, Vicky Foura (Stanford)</p>
+  <p>31 January 2018, Adam Harris (UCL)</p>
 </div>
 <div style="float: right; width: 48%;">
   <h2><a href = "https://polscidrs.github.io/other/">Around UCL</a></h2>
-  <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a> 7 November 2017, Molly Roberts (University of California, San Diego)</p>
-  <p>Upcoming at <a href = "https://www.politics.ox.ac.uk/events.html" target = "_blank" >Oxford University's DPIR Events:</a> 7 November 2017, Dominik Handgartner (The Causal Effect of University Education on Political Attitudes and Behavior)</p>
+  <p>Upcoming at <a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target = "_blank" >LSE's Political Science and Political Economy Group Research Seminar:</a> 16 January 2018, Horacio Larreguy (Harvard)</p>
 </div>
