--- a/calendar/index.html
+++ b/calendar/index.html
@@ -5,7 +5,7 @@ title: "Seminar Calendar"
 
 <p>For access to presented papers please email <a href="mailto:alexandra.hartman@ucl.ac.uk">alexandra.hartman@ucl.ac.uk</a>. To be added to the Departmental Research Seminar's mailing list please email <a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a></p>
 
-<p><b>2017/2018 - Term 1</b></p>
+<p><b>2017/2018 - Term 2</b></p>
 <TABLE>
    <TR>
      <TD><b>Date</b></TD>
@@ -13,43 +13,48 @@ title: "Seminar Calendar"
      <TD><b>Paper</b></TD>
    </TR>
    <TR>
-     <TD>4 October</TD>
-     <TD>Jane Gingrich (Oxford)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3086175" target="_blank" >Schools and Economic Attitudes</a></TD>
-   </TR>
-   <TR>
-     <TD>11 October</TD>
-     <TD>Daniel Krcmaric (Northwestern)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3112399" target="_blank" >Information, Secrecy, and Civilian Targeting</a></TD>
-   </TR>
-   <TR>
-     <TD>18 October</TD>
-     <TD>Alexandra Hartman (UCL)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3127507" target="_blank" >Legible Institutions and Land Demand</a></TD>
-   </TR>
-   <TR>
-     <TD>1 November</TD>
-     <TD>Manuel Vogt (UCL)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3156133" target="_blank" >From Claims to Violence: Signaling, Outbidding, and Escalation in Ethnic Conflict</a></TD>
-   </TR>
-   <TR>
-     <TD>15 November</TD>
-     <TD>Christine Cheng (King's College)</TD>
+     <TD>17 January</TD>
+     <TD>Elizabeth Morrow (King's College)</TD>
      <TD>TBD</TD>
    </TR>
    <TR>
-     <TD>22 November</TD>
-     <TD>Tom O'Grady (UCL)</TD>
+     <TD>24 January</TD>
+     <TD>Vicky Foura (Stanford)</TD>
      <TD>TBD</TD>
    </TR>
    <TR>
-     <TD>6 December</TD>
-     <TD>Andy Eggers (Oxford)</TD>
+     <TD>31 January</TD>
+     <TD>Adam Harris (UCL)</TD>
      <TD>TBD</TD>
    </TR>
    <TR>
-     <TD>13 December</TD>
-     <TD>Laura Jakli (Berkeley)</TD>
+     <TD>7 February</TD>
+     <TD>Dan Berliner (LSE)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>21 February</TD>
+     <TD>Attila Lindner (UCL)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>28 February</TD>
+     <TD>Macartan Humphreys (WZB)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>7 March</TD>
+     <TD>Imran Rasul (UCL)</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>14 March</TD>
+     <TD>TBD</TD>
+     <TD>TBD</TD>
+   </TR>
+   <TR>
+     <TD>21 March</TD>
+     <TD>Andy Harris (NYU)</TD>
      <TD>TBD</TD>
    </TR>
 </TABLE>
