--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,10 @@
-Test
+---
+layout: archive
+title: "Contact Us"
+---
+
+
+<p>Philipp Schroeder</p>
+<p><a href = "mailto:philipp.schroeder.13@ucl.ac.uk">philipp.schroeder.13@ucl.ac.uk</a>.</p>
+<p>31 Tavistock Square, Room 1.01</p>
+
