--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: "Departmental Research Seminar"
 <div style="float: left; width: 48%;">
   <h2><a href = "https://polscidrs.github.io/calendar/">What's on?</a></h2>
   <p>17 January 2018, Elizabeth Morrow (King's College)</p>
-  <p>24 January 2018, Vicky Foura (Stanford)</p>
+  <p>24 January 2018, Vicky Fouka (Stanford)</p>
   <p>31 January 2018, Adam Harris (UCL)</p>
 </div>
 <div style="float: right; width: 48%;">
