--- a/calendar/index.html
+++ b/calendar/index.html
@@ -19,7 +19,7 @@ title: "Seminar Calendar"
    </TR>
    <TR>
      <TD>24 January</TD>
-     <TD>Vicky Foura (Stanford)</TD>
+     <TD>Vicky Fouka (Stanford)</TD>
      <TD>TBD</TD>
    </TR>
    <TR>
