--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ title: "Departmental Research Seminar"
   <h2><a href = "https://polscidrs.github.io/calendar/">What's on?</a></h2>
   <p>17 January 2018, Elizabeth Morrow (King's College): <a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3288163" target = "_blank" >The rise and fall of the English Defence League: self-governance, marginal members
 and the far right</a></p>
-  <p>24 January 2018, Vicky Fouka (Stanford)</p>
-  <p>31 January 2018, Adam Harris (UCL)</p>
+  <p>24 January 2018, Vicky Fouka (Stanford): TBD</p>
 </div>
 <div style="float: right; width: 48%;">
   <h2><a href = "https://polscidrs.github.io/other/">Around UCL</a></h2>
