--- a/calendar/index.html
+++ b/calendar/index.html
@@ -7,6 +7,9 @@ title: "Seminar Calendar"
 
 <p><b>2017/2018 - Term 2</b></p>
 <TABLE>
+  <col width="40">
+  <col width="40">
+  <col width="150">
    <TR>
      <TD><b>Date</b></TD>
      <TD><b>Speaker</b></TD>
