--- a/calendar/index.html
+++ b/calendar/index.html
@@ -8,6 +8,7 @@ title: "Seminar Calendar"
 <p><b>2017/2018 - Term 2</b></p>
 <TABLE>
   <col width="40">
+  <col width="40">
    <TR>
      <TD><b>Date</b></TD>
      <TD><b>Speaker</b></TD>
