--- a/calendar/index.html
+++ b/calendar/index.html
@@ -9,6 +9,7 @@ title: "Seminar Calendar"
 <TABLE>
   <col width="40">
   <col width="40">
+  <col width="100">
    <TR>
      <TD><b>Date</b></TD>
      <TD><b>Speaker</b></TD>
