--- a/other/index.html
+++ b/other/index.html
@@ -22,4 +22,14 @@ title: "Around UCL"
      <TD>Matthew Goodwin (Kent)</TD>
      <TD><a href = "https://www.kcl.ac.uk/sspp/departments/politicaleconomy/newsevents/Governing-after-Brexit-Lectures/Governing-after-Brexit-Lectures.aspx" target="_blank">King's College Governing after Brexit Lecture Series</a></TD>
    </TR>
+  <TR>
+     <TD>30 January 2018</TD>
+     <TD>Sanjeev Goyal (Cambridge)</TD>
+     <TD><a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+   </TR>
+  <TR>
+     <TD>6 February 2018</TD>
+     <TD>James Fearon (Stanford)</TD>
+     <TD><a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
+   </TR>
 </TABLE>
