--- a/other/index.html
+++ b/other/index.html
@@ -18,6 +18,11 @@ title: "Around UCL"
      <TD><a href = "http://www.lse.ac.uk/government/research/resgroups/PSPE/ResearchSeminar.aspx" target="_blank">LSE Political Science and Political Economy Group Research Seminar</a></TD>
    </TR>
   <TR>
+     <TD>18 January 2018</TD>
+     <TD>Sonia Bhalotra (Essex)</TD>
+     <TD><a href = "https://www.essex.ac.uk/events/2018/01/18/women-legislators-and-economic-performance" target="_blank">Essex Workshop on Development (EWOD): Women legislators and economic performance</a></TD>
+   </TR>
+  <TR>
      <TD>24 January 2018</TD>
      <TD>Matthew Goodwin (Kent)</TD>
      <TD><a href = "https://www.kcl.ac.uk/sspp/departments/politicaleconomy/newsevents/Governing-after-Brexit-Lectures/Governing-after-Brexit-Lectures.aspx" target="_blank">King's College Governing after Brexit Lecture Series</a></TD>
