--- a/calendar/index.html
+++ b/calendar/index.html
@@ -15,8 +15,7 @@ title: "Seminar Calendar"
    <TR>
      <TD>17 January</TD>
      <TD>Elizabeth Morrow (King's College)</TD>
-     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3288163" target = "_blank" >The rise and fall of the English Defence League: self-governance, marginal members
-and the far right</a></TD>
+     <TD><a href = "https://moodle.ucl.ac.uk/mod/resource/view.php?id=3288163" target = "_blank" >The rise and fall of the English Defence League</a></TD>
    </TR>
    <TR>
      <TD>24 January</TD>
